<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.AddMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/header_add_meeting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/header_add_meeting"
            android:textColor="@color/white"
            android:background="@color/blue_500"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"
            android:focusable="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_meeting_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/header_add_meeting"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_meeting_name"
            app:startIconDrawable="@drawable/ic_outline_create_24"
            app:startIconTint="@color/blue_500"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconTint="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/button_create_meeting"
            android:nextFocusDown="@id/date_meeting_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_meeting_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_meeting_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/name_meeting_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/hint_meeting_date"
            app:startIconDrawable="@drawable/ic_outline_edit_calendar_24"
            app:startIconTint="@color/blue_500"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/name_meeting_layout"
            android:nextFocusDown="@id/start_time_meeting_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_meeting_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="date"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_time_meeting_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/date_meeting_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/time_spacer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/hint_meeting_startTime"
            app:startIconDrawable="@drawable/ic_outline_access_time_24"
            app:startIconTint="@color/blue_500"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/date_meeting_layout"
            android:nextFocusDown="@id/end_time_meeting_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_time_meeting_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="time"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/time_spacer"
            app:layout_constraintTop_toBottomOf="@id/date_meeting_layout"
            app:layout_constraintStart_toEndOf="@id/start_time_meeting_layout"
            app:layout_constraintEnd_toStartOf="@id/end_time_meeting_layout"
            android:layout_width="32dp"
            android:layout_height="0dp"
            android:focusable="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/end_time_meeting_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/date_meeting_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time_spacer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_meeting_endTime"
            app:startIconDrawable="@drawable/ic_outline_access_time_24"
            app:startIconTint="@color/blue_500"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/start_time_meeting_layout"
            android:nextFocusDown="@id/room_meeting_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_time_meeting_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="time"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_meeting_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@id/end_time_meeting_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/hint_meeting_room"
            app:startIconDrawable="@drawable/ic_outline_meeting_room_24"
            app:startIconTint="@color/blue_500"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/end_time_meeting_layout"
            android:nextFocusDown="@id/add_participant_layout">

            <AutoCompleteTextView
                android:id="@+id/room_meeting_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint=""
                android:focusable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_participant_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/room_meeting_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_add_participant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/hint_participant_add"
            app:startIconDrawable="@drawable/ic_outline_create_24"
            app:startIconTint="@color/blue_500"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconTint="@color/red"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_participant_add"
            app:errorEnabled="true"
            android:focusable="true"
            android:nextFocusUp="@id/room_meeting_layout"
            android:nextFocusDown="@id/button_add_participant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_participant_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_add_participant"
            app:layout_constraintTop_toBottomOf="@id/room_meeting_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_outline_group_add_24"
            android:backgroundTint="@color/blue_500"
            app:tint="@color/white"
            android:focusable="true"
            android:nextFocusUp="@id/add_participant_layout"
            android:nextFocusDown="@id/participants_listView" />

        <TextView
            android:id="@+id/list_participants_title_layout"
            app:layout_constraintTop_toBottomOf="@id/add_participant_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/blue_500"
            android:textColor="@color/white"
            android:text="@string/title_participants_list"
            android:textSize="14sp"
            android:gravity="bottom"
            android:paddingVertical="4dp"
            android:paddingHorizontal="12dp"
            android:focusable="false" />

        <LinearLayout
            android:id="@+id/list_participants_layout"
            app:layout_constraintTop_toBottomOf="@id/list_participants_title_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <ListView
                android:id="@+id/participants_listView"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:inputType="none"
                android:paddingHorizontal="8dp"
                android:scrollbars="vertical"
                android:scrollbarSize="12dp"
                android:scrollbarStyle="outsideInset"
                android:background="@drawable/sh_listview_background"
                android:nestedScrollingEnabled="true"
                android:focusable="true"
                android:nextFocusUp="@id/button_add_participant"
                android:nextFocusDown="@id/button_return" />

        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/list_participants_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusable="false" />

            <Button
                android:id="@+id/button_return"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:layout_constraintTop_toBottomOf="@id/list_participants_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="0dp"
                android:text="@string/button_return_text"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                app:icon="@drawable/ic_baseline_cancel_24"
                app:iconTint="@color/red"
                app:iconSize="28dp"
                android:focusable="true"
                android:nextFocusUp="@id/participants_listView"
                android:nextFocusDown="@id/button_create_meeting" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusable="false" />

            <Button
                android:id="@+id/button_create_meeting"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:layout_constraintTop_toBottomOf="@id/list_participants_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="0dp"
                android:text="@string/button_create_meeting_text"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="12dp"
                app:icon="@drawable/ic_baseline_check_circle_24"
                app:iconTint="@color/green"
                app:iconSize="28dp"
                android:focusable="true"
                android:nextFocusUp="@id/button_return"
                android:nextFocusDown="@id/name_meeting_layout" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusable="false" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
