...
        android:textColor="@color/white"
        android:background="@color/blue_500"
        android:gravity="center|top"
        android:padding="4dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="4dp"
...
        android:layout_height="0dp"
        android:text=""
        android:gravity="center"
        android:paddingVertical="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMeetingButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="48dp"
...
