...
    <string name="error_meeting_time">Choisir une heure !</string>
    <string name="error_meeting_inconsistentTime">Horaires incohérents !</string>
    <string name="error_meeting_room">Choisir une salle !</string>
    <string name="error_email">Adresse eMail incorrecte !</string>
    <string name="error_slot">Salle non disponible sur ce créneau !</string>
    <string name="title_participants_list">Participants</string>
    <string name="title_alertDialog">Confirmation</string>
    <string name="alertDialog_delete_meeting">Voulez-vous supprimer cette réunion ?</string>
    <string name="alertDialog_empty_participants_list">La liste des participants est vide !\nPlanifier quand même ?</string>
    <string name="button_return_text">Retour</string>
    <string name="button_create_meeting_text">Planifier</string>
    <string name="exception_deleteMeeting">Erreur de suppression de la réunion</string>
    <string name="exception_createMeeting">Erreur de création de la réunion</string>
...
